修复 toolbar 滚动条问题

--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -15,6 +15,9 @@ https://unpkg.com/tailwindcss@3.3.3/src/css/preflight.css */
 	cursor: none !important;
 }
 
+::-webkit-scrollbar {
+	display: none; /* Safari and Chrome */
+}
 ::before,
 ::after {
 	--tw-content: "";
